<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">SimpleTodo</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add Item</string>

    <!-- Title for the activity to new a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a todo item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a TODO item</string>

    <!-- Label for task name of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_task_name">Task Name</string>

    <!-- Label for task description of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_task_description">Notes</string>

    <!-- Hint for task description of attributes in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_description">Description (Optional...)</string>

    <!-- Label for task priority of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_task_priority">Priority</string>

    <!-- Label for task status of attributes in the editor [CHAR LIMIT=30] -->
    <string name="label_task_status">Status</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Label for dropdown menu option if the item's priority is low [CHAR LIMIT=20] -->
    <string name="priority_low">LOW</string>

    <!-- Label for dropdown menu option if the item's priority is medium [CHAR LIMIT=20] -->
    <string name="priority_medium">MEDIUM</string>

    <!-- Label for dropdown menu option if the item's priority is high [CHAR LIMIT=20] -->
    <string name="priority_high">HIGH</string>

    <!-- Label for dropdown menu option if the item's status is To-Do [CHAR LIMIT=20] -->
    <string name="status_todo">TODO</string>

    <!-- Label for dropdown menu option if the item's status is inprogress [CHAR LIMIT=20] -->
    <string name="status_inprogress">IN PROGRESS</string>

    <!-- Label for dropdown menu option if the item's status is done [CHAR LIMIT=20] -->
    <string name="status_done">DONE</string>

    <!-- Toast message in editor when new todo-item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_todoitem_successful">Todo Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_todoitem_failed">Error with saving Todo Item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_todoitem_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_todoitem_failed">Error with updating Item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_todoitem_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_todoitem_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

</resources>
